--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "mysql2": "^3.11.3",
     "sequelize": "^6.37.4",
+    "serve-favicon": "^2.5.0",
     "validator": "^13.12.0"
   }
 }
